Corrected hero overlapping with nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1061,8 +1061,8 @@ body {
   .hero-title-wrapper {
     flex-direction: column;
     transform: translateX(5%);
-    margin-top: 35vh;
-    height: 80vh;
+    margin-top: 40vh;
+    height: 76vh;
     justify-content: space-between;
   }
   .hero-bg{
@@ -1243,8 +1243,8 @@ body {
     width: 95%;
   }
   .hero-title-wrapper {
-    margin-top: 32vh;
-    height: 76vh;
+    margin-top: 38vh;
+    height: 75vh;
   }
   .hero-bg{
     width: 78%;
@@ -1400,7 +1400,7 @@ body {
     height: auto;
   }
   .hero-title-wrapper {
-    margin-top: 37vh;
+    margin-top: 42vh;
   }
   .hero-title > span > span{
     font-size: 4.7rem;
